--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-
-  <head>
+<head>
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
@@ -9,9 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
-    
-      Home &middot; Kudzu Playhouse
-    
+    {% if page.title %}
+      {{ page.title }} &middot; {{ site.title }}
+    {% else %}
+      {{ site.title }} &middot; {{ site.tagline }}
+    {% endif %}
   </title>
 
   <!-- CSS -->
@@ -27,49 +26,3 @@
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 </head>
-
-
-  <body>
-
-    <div class="sidebar">
-  <div class="container sidebar-sticky">
-    <div class="sidebar-about">
-      <h1>Kudzu Playhouse</h1>
-      <p class="lead"></p>
-    </div>
-
-    <ul class="sidebar-nav">
-      <li class="sidebar-nav-item active">
-        <a href="/">Home</a>
-      </li>
-
-      
-
-      
-      
-        
-          
-            <li class="sidebar-nav-item active">
-              <a href="/home/">Home</a>
-            </li>
-          
-        
-      
-    </ul>
-
-    <p>&copy; 2016. All rights reserved.</p>
-  </div>
-</div>
-
-
-    <div class="content container">
-      <div class="page">
-  <h1 class="page-title">Home</h1>
-  <h1 id="welcome-to-kudzu-playhouse">Welcome to Kudzu Playhouse!</h1>
-
-</div>
-
-    </div>
-
-  </body>
-</html>
