--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,10 +18,12 @@
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
+          {% if node.title != "Index" %}
           {% if node.layout == "page" %}
             <li class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">
               <a href="{{ node.url }}">{{ node.title }}</a>
             </li>
+          {% endif %}
           {% endif %}
         {% endif %}
       {% endfor %}
