--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+  {% if page.title != "Index" %}<h1 class="page-title">{{ page.title }}</h1>{% endif %}
   {{ content }}
 </div>
