--- a/_layouts/show.html
+++ b/_layouts/show.html
@@ -15,4 +15,6 @@ layout: default
     <img src="{{page['featured image']}}">
   </div>
   {{ content }}
+  <hr>
+  <em>{{ page.special_arrangments }}</em>
 </div>
