--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,5 +39,14 @@
         $(".slick").slick({
             autoplay: true
         });
+
+        var footerPosition = parseInt($("footer").offset().top, 10);
+        var footerHeight = parseInt($("footer").height(), 10);
+        var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+        var margin = viewportHeight - (footerHeight + footerPosition);
+
+        if (footerPosition < viewportHeight) {
+            $("footer").css({marginTop: margin + 'px'})
+        }
     });
 </script>
