--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
         var viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
         var margin = viewportHeight - (footerHeight + footerPosition);
 
-        if (footerPosition < viewportHeight) {
+        if (margin > 0) {
             $("footer").css({marginTop: margin + 'px'})
         }
     });
