--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,7 @@
       {% assign pages_list = site.pages | sort:"position", "last" %}
       {% for node in pages_list %}
         {% if node.title != null %}
-          {% if node.layout == "page" and node.title != "Index" %}
+          {% if node.layout == "page" and node.title != "Index" and (node['is hide_nav'] == false or node['is hide_nav'] == null) %}
             <li class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}">
               <a href="{{ node.url }}">{{ node.title }}</a>
             </li>
